--- a/src/page/Header/Header.css
+++ b/src/page/Header/Header.css
@@ -5,7 +5,8 @@
 
 }
 .header {
+    background-color: aqua;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
