--- a/src/page/Movie.css
+++ b/src/page/Movie.css
@@ -1,3 +1,20 @@
+.movieItem img {
+    vertical-align: top;
+    width: 200px;
+    min-height: 1px;
+    opacity: 1;
+    object-fit: cover;
+    transition: opacity 420ms ease 0s;
+}
+.movieList{
+    display: flex;
+    position: relative;
+    flex-wrap: nowrap;
+    overflow: visible;
+    gap: 16px;
+}
+
+
 .titleName{
     position: relative;
     color: rgb(41, 42, 50);
@@ -12,4 +29,34 @@
     overflow-x: auto;
     white-space: nowrap;
   }
-  
+
+.content1{
+    color: rgb(41, 42, 50);
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: -0.3px;
+    line-height: 22px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 3px;
+}
+
+.content2{
+    color: rgb(41, 42, 50);
+    padding-bottom: 1px;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: normal;
+    line-height: 21px;
+}
+
+.content3{
+    color: rgb(116, 116, 123);
+    white-space: normal;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: -0.3px;
+    line-height: 18px;
+    margin-top: 5px;
+}
