--- a/src/page/Movie.css
+++ b/src/page/Movie.css
@@ -12,6 +12,7 @@
     flex-wrap: nowrap;
     overflow: visible;
     gap: 16px;
+    margin: 42px;
 }
 
 
@@ -22,7 +23,8 @@
     font-size: 22px;
     font-weight: 700;
     letter-spacing: -0.4px;
-    line-height: 30px; 
+    line-height: 30px;
+    margin: 42px;
 }
 .movieList {
     display: flex;
