--- a/src/page/Header/Header.css
+++ b/src/page/Header/Header.css
@@ -5,6 +5,10 @@
 }
 
 .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
     background-color: aqua;
     display: flex;
     align-items: center;
