--- a/src/page/Header/Header.css
+++ b/src/page/Header/Header.css
@@ -17,44 +17,7 @@
     outline: inherit;
     cursor: pointer;
 }
-.header .list1,
-.header .list2,
-.header .list3,
-.header .list4 {
-  display: inline-block;
-}
 
-.searchInput,
-.LoginButton,
-.SignUpButton {
-  display: inline-block;
-}
-.list1>a {
-    text-decoration: none;
-    color: rgb(126, 126, 126);
-}
-
-.list2>a {
-    text-decoration: none;
-    color: rgb(126, 126, 126);
-}
-
-.list3>a {
-    text-decoration: none;
-    color: rgb(126, 126, 126);
-}
-
-.list4>a {
-    text-decoration: none;
-    color: rgb(126, 126, 126);
-}
-
-.list {
-    display: flex;
-
-    font-size: 15px;
-
-}
 
 .SignUpButton {
     cursor: pointer;
@@ -77,8 +40,14 @@
 
 .LoginButton {
     cursor: pointer;
-    border: none;
-    background: none;
+    background: transparent;
+    color: rgb(116, 116, 123);
+    font-size: 14px;
+    letter-spacing: -0.3px;
+    padding: 0px;
+    border: 0px;
+    margin: 15px 0px;
+
 }
 
 .LogoImage {
@@ -159,18 +128,65 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    width: 20%;
+    width: 100%;
     height: 38px;
     padding: 7px 10px 8px 36px;
     border-radius: 2px;
     background-color: rgb(245, 245, 247);
     margin-left: 200px;
+
 }
 
-.ModalBlock{
+.ModalBlock {
     width: 350px;
     height: 600px;
     margin-top: 300px;
     border-radius: 5px;
     background-color: #ffffff;
+}
+
+.searchContainer {
+    position: relative;
+    width: 30%;
+    margin-left: 200px;
+}
+
+.searchContainer img {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 520px;
+    height: 420px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.searchInput {
+    position: relative;
+    z-index: 2;
+    width: 296px;
+    height: 40px;
+    right: 50px;
+    border-radius: 10px 10px;
+    border: none;
+}
+
+
+.userControls {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header .menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header .menu a {
+    color: #000;
+    font-size: 15px;
+    margin-right: 10px;
+    text-decoration: none;
 }
