--- a/src/page/Header/Header.css
+++ b/src/page/Header/Header.css
@@ -13,13 +13,14 @@
     top: 0;
     width: 100%;
     z-index: 100;
-    background-color: aqua;
+    background-color: rgb(236, 240, 240);
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: rgb(126, 126, 126);
     outline: inherit;
     cursor: pointer;
+    border-bottom: 1px solid black;
 }
 
 
@@ -158,16 +159,16 @@
 .searchInput {
     position: relative;
     z-index: 2;
-    width: 266px;
+    width: 262px;
     right: 216px;
     border-radius: 5px 5px;
     border: none;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    height: 40px;
+    height: 39px;
     padding: 7px 10px 8px 26px;
-    background-color: rgb(245, 245, 247);
+    background-color: rgb(236, 240, 240);
     margin-left: 200px;
 }
 
