footer 하이라이트 색상 변경
강조되는 색상을 빨간색으로 변경

--- a/src/page/Footer/Footer.css
+++ b/src/page/Footer/Footer.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
     width: 100%;
     background-color: black;
+    color: white; 
 }
 
+.highlight {
+    color: rgb(255, 5, 88);
+}
 
 .li1, .li2, .li3, .li4, .li5 {
     
