--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -34,3 +34,30 @@
     display: block;
     unicode-bidi: isolate;
 }
+
+.section{
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    font-family: "Pretendard", "Apple SD Gothic Neo", "Nanum Gothic", "Malgun Gothic", sans-serif;
+    color: rgb(0, 0, 0);
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    display: grid;
+    row-gap: 20px;
+    -webkit-box-align: center;
+    align-items: center;
+    border-bottom: 1px solid rgb(217, 217, 217);
+    justify-items: center;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 0px 0px 20px;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+.box0{
+    display: block;
+    box-sizing: border-box;
+    justify-content: space-around;
+}
