--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -56,8 +56,47 @@
     justify-content: center;
 }
 
-.box0{
-    display: block;
-    box-sizing: border-box;
+.box1and2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.movieDetail {
+    display: flex;
+    flex-direction: row;
+    margin-top: 100px;
+}
+
+.movieImg {
+    order: 1;
+}
+
+.box0 {
+    order: 2;
+}
+
+.box1 {
+    display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.content1{
+    color: #888;
+    font-size: 36px;
+}
+
+.box3 {
+    order: 3;
+    display: flex; 
+    justify-content: space-around;
+}
+
+
+.ratingContainer svg {
+    fill: #eee; /* 기본 색상 */
+}
+
+.ratingContainer:hover svg {
+    fill: #F82C60; /* 마우스 오버시 색상 */
 }
