--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -1,24 +1,17 @@
-/* * {
-    box-sizing: border-box;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-} */
-
 .movieImg {
     vertical-align: top;
     width: 300px;
+    height: 300px;
     min-height: 1px;
     opacity: 1;
-    object-fit: cover;
-    transition: opacity 420ms ease 0s;
+    margin: 20px;
+    
 }
 
 
-.movieContent{
+.movieContent {
     -webkit-text-size-adjust: 100%;
     font-family: "Pretendard", "Apple SD Gothic Neo", "Nanum Gothic", "Malgun Gothic", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
     color: rgb(140, 140, 140);
@@ -26,16 +19,23 @@
     font-weight: 500;
     line-height: 22px;
     white-space: pre-line;
-    margin: 20px 0px 30px;
+    margin: 50px 50px 50px;
     min-height: 150px;
+    
 }
 
-.box2{
-    display: block;
-    unicode-bidi: isolate;
+.box3 {
+    order: 3;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    padding: 0px 30px;
 }
 
-.section{
+.section {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     font-family: "Pretendard", "Apple SD Gothic Neo", "Nanum Gothic", "Malgun Gothic", sans-serif;
@@ -81,48 +81,60 @@
     align-items: center;
 }
 
-.box2 {
-    order: 3;
-    display: flex; 
-    justify-content: space-around;
-}
 
 
 .ratingContainer svg {
-    fill: #eee; /* 기본 색상 */
+    fill: #eee;
+    /* 기본 색상 */
 }
 
 .ratingContainer:hover svg {
-    fill: #F82C60; /* 마우스 오버시 색상 */
+    fill: #F82C60;
+    /* 마우스 오버시 색상 */
 }
 
 
-.content4{
+.content4 {
     position: relative;
     justify-content: center;
     display: flex;
     color: #888;
     font-size: 36px;
 }
-.content5{
+
+.content5 {
     position: relative;
     justify-content: center;
     display: flex;
     color: #8c8c8c;
     font-size: 12px;
     font-weight: 500;
+    margin-bottom: 20px;
 }
 
 .icon {
-    position:relative;
+    position: relative;
     justify-content: center;
     display: flex;
     -webkit-box-pack: justify;
     justify-content: space-between;
-    width: 20px;
-    height: 20px;
-    
+    width: 30px;
+    height: 30px;
     color: #8c8c8c;
     text-align: center;
-    padding: 14px 0;
+    padding: 14px 10px;
+}
+
+.content6 {
+    display: flex;
+    align-items: center;
+    color: #8c8c8c;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 12px;
+    text-align: center;
+    width: unset;
+    height: 30px;
+    padding: 0;
+
 }
