--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -27,12 +27,14 @@
 .box3 {
     order: 3;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     height: 100%;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
-    padding: 0px 30px;
+}
+.box3 > *:not(:last-child) {
+    margin-right: 80px;
 }
 
 .section {
@@ -73,12 +75,14 @@
 
 .box0 {
     order: 2;
+    width: 100%;
 }
 
 .box1 {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
 }
 
 
@@ -137,4 +141,9 @@
     height: 30px;
     padding: 0;
 
+}
+
+.Maincontainer2{
+    flex-direction: row;
+    display: flex;
 }
