--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -5,6 +5,8 @@
     min-height: 1px;
     opacity: 1;
     margin: 20px;
+    display: block;
+    border: 2px solid #d9d9d9;;
     
 }
 
@@ -64,10 +66,13 @@
 }
 
 .movieDetail {
-    display: flex;
     flex-direction: row;
-    margin-top: 100px;
+    width: 100%;
+    height: 100%;
+    padding-top: 50px;
+    padding-bottom: 500px;
 }
+
 
 .movieImg {
     order: 1;
@@ -146,4 +151,18 @@
 .Maincontainer2{
     flex-direction: row;
     display: flex;
+}
+
+.Maincontainer1{
+    display: flex;
+    position: relative;
+
+    justify-content: center;
+    background: url(https://an2-img.amz.wtchn.net/image/v2/uoobduBrKiJME7GG9lcQNQ.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1Ua3lNSGd4TURnd2NUZ3dJbDBzSW5BaU9pSXZkakl2YzNSdmNtVXZhVzFoWjJVdk9EZzJOakE0TnpFeU1qRTJNaUo5LnlvdXV6ZkI4cXByVkVuVU1yS0FXb1g2WlFWbVNZUTJ3X2VyejlseVNPbjg) no-repeat center;
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    margin-bottom: 20px;
 }
