--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -168,7 +168,7 @@
 }
 
 
-.content1 {
+.lec1 {
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -194,7 +194,7 @@
 
 }
 
-.content2 {
+.lec2 {
     padding-left: 20px;
     font-size: 14px;
     line-height: 18px;
@@ -219,7 +219,7 @@
 
 }
 
-.content3 {
+.lec3 {
     padding-left: 20px;
     font-size: 14px;
     line-height: 18px;
