--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -156,9 +156,17 @@
 .Maincontainer1{
     display: flex;
     position: relative;
+    justify-content: center;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+.introImg{
+    display: flex;
+    position: relative;
 
     justify-content: center;
-    background: url(https://an2-img.amz.wtchn.net/image/v2/uoobduBrKiJME7GG9lcQNQ.jpg?jwt=ZXlKaGJHY2lPaUpJVXpJMU5pSjkuZXlKdmNIUnpJanBiSW1SZk1Ua3lNSGd4TURnd2NUZ3dJbDBzSW5BaU9pSXZkakl2YzNSdmNtVXZhVzFoWjJVdk9EZzJOakE0TnpFeU1qRTJNaUo5LnlvdXV6ZkI4cXByVkVuVU1yS0FXb1g2WlFWbVNZUTJ3X2VyejlseVNPbjg) no-repeat center;
     -webkit-background-size: cover;
     background-size: cover;
     width: 100%;
@@ -166,7 +174,6 @@
     overflow: hidden;
     margin-bottom: 20px;
 }
-
 
 .lec1 {
     font-size: 36px;
