--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -165,12 +165,11 @@
 .introImg{
     display: flex;
     position: relative;
-
     justify-content: center;
     -webkit-background-size: cover;
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 100%;
     overflow: hidden;
     margin-bottom: 20px;
 }
@@ -349,12 +348,4 @@
     cursor: pointer;
     width: 24px;
     height: 24px;
-    margin: 140px 200px;
-    left: 200px;
-    
-    
-    
-    
-    
-    
 }
