--- a/src/page/MovieDetail.css
+++ b/src/page/MovieDetail.css
@@ -34,6 +34,7 @@
     height: 100%;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
+    cursor: pointer;
 }
 .box3 > *:not(:last-child) {
     margin-right: 80px;
